# cofr

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  infra.yml
apps/client/: .env.example  Dockerfile  README.md  biome.json  index.ts  package.json  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/client/app/: entry.client.tsx  entry.server.tsx  globals.css  root.tsx  routes.ts  sw.ts
apps/client/app/components/: AccountDeleteModal.tsx  AppleSplashLinks.tsx  BudgetFormModal.tsx  CategoryColorPicker.tsx  CategoryFormModal.tsx  CategoryPieTooltip.tsx  ControlsPanel.tsx  DeleteAccountModal.tsx  DeleteConfirmModal.tsx  ExchangeRatesModal.tsx  ExpenseFormModal.tsx  ExportHistoryTable.test.ts  ExportHistoryTable.tsx  ExportModal.test.ts  ExportModal.tsx  FilterModal.tsx  LegalLayout.tsx  OfflineBanner.tsx  PasswordInput.tsx  PasswordRequirements.tsx  PullToRefreshIndicator.tsx  RecurringFormModal.tsx  TelegramButton.tsx  ThemeToggle.tsx  Tooltip.tsx  TransferFormModal.tsx  (+1 more)
apps/client/public/: install.ps1  install.sh  robots.txt  sitemap.xml  test.js  theme.js
apps/client/scripts/: generate-splash.ts
apps/client/test/: setup.ts
apps/scribe/: Cargo.toml  README.md  pyproject.toml
apps/scribe/src/: lib.rs  models.rs
apps/scribe/src/export/csv/: mod.rs  tests.rs
apps/scribe/src/export/pdf/: mod.rs  tests.rs  utils.rs
apps/scribe/src/export/xlsx/: mod.rs  tests.rs
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_debug.py
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_baseline_schema.py  001_initial_schema.py  002_add_auth_providers.py  002_exchange_rates.py  003_local_auth.py  004_soft_delete.py  005_categories.py  006_session_timeout.py  007_add_receipt_file_id.py  008_add_is_opening_balance.py  009_add_accounts.py  010_add_performance_indexes.py  011_email_verification.py  012_add_exports_table.py  013_remove_telegram_artifacts.py  014_dashboard_widgets.py  015_add_merchant.py  016_recurring_rules.py  017_add_analytics_indexes.py  018_add_terms_accepted_at.py  019_add_budgets.py  020_soft_delete_categories.py
apps/server/app/: config.py  database.py  main.py  middleware.py  rate_limit.py  s3.py
apps/server/app/auth/: dependencies.py  jwt.py  passwords.py  telegram.py
apps/server/app/db/: models.py  schemas.py
apps/server/app/email/: __init__.py  provider.py  rate_limit.py  service.py  templates.py  tokens.py
apps/server/app/email/templates/: base.html  password_reset.html  verification.html  welcome.html
apps/server/app/routers/: account.py  accounts.py  auth.py  budgets.py  categories.py  dashboard.py  dev_email.py  exchange_rates.py  expenses.py  exports.py  local_auth.py  oauth.py  recurring.py  transfers.py  webhooks.py
apps/server/app/services/: account_service.py  budget_service.py  category_service.py  dashboard_analytics_service.py  dashboard_service.py  exchange_rates.py  expense_service.py  export_service.py  recurring_service.py
apps/server/tests/: conftest.py  test_account.py  test_accounts.py  test_auth.py  test_categories.py  test_crypto.py  test_dashboard.py  test_dashboard_analytics.py  test_email.py  test_exchange_rates.py  test_expenses.py  test_export_history.py  test_exports.py  test_recurring.py  test_stats.py  test_transfers.py  test_webhooks.py
apps/tg-bot/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  go.mod  go.sum  main.go
apps/tg-bot/app/: callbacks.go  commands.go  config.go  controllers.go  currency_test.go  formatter.go  formatter_test.go  keyboards.go  messages.go  messages_test.go  session.go  session_test.go  summary.go  summary_test.go  utils.go  utils_test.go
apps/tg-bot/db/: db.go  models.go
apps/tg-bot/repository/: account.go  category.go  init.go  testing.go  transaction.go  user.go
docs/: database-backup-system.md
infra/: .env.example  Caddyfile  Caddyfile.dev  Caddyfile.prod  Caddyfile.selfhost  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.selfhost.yml  docker-compose.yml  pg_hba.selfhost.conf  postgresql.conf
infra/cloudflared/: config.yml.example
infra/docker/postgres/: .dockerignore  Dockerfile
infra/systemd/: postgres-backup.service  postgres-backup.timer
infra/terraform/: README.md  cloud-init.yaml.tftpl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: backup_postgres.sh  install.ps1  install.sh  restore_db_from_s3.sh  run-local.sh  run.sh  setup-pi.sh  setup_dev.sh  setup_prod.sh  test_backup_system.sh
(+100 files in other folders)
