[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

[lib]
name = "scribe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
csv = "1.3"
rust_xlsxwriter = "0.80"
printpdf = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }
