[project]
name = "cofr-server"
version = "0.1.0"
description = "Expense Dashboard API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0",
    "python-multipart>=0.0.12",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.1.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.0.0",
    "resend>=2.0.0",
    "svix>=1.21.0",
    "jinja2>=3.1.0",
    "sentry-sdk[fastapi]>=2.55.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (required by FastAPI Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]
