[project]
name = "cofr-server"
version = "0.1.0"
description = "Expense Dashboard API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "PyJWT>=2.12.1",
    "cryptography>=46.0.7",
    "python-multipart>=0.0.26",
    "authlib>=1.6.9",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.3.0",
    "resend>=2.27.0",
    "svix>=1.90.0",
    "jinja2>=3.1.6",
    "sentry-sdk[fastapi]>=2.57.0",
    "boto3>=1.42.88",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (required by FastAPI Depends)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]
